[gd_scene load_steps=3 format=3 uid="uid://bd6pa3uniiy77"]

[ext_resource type="Script" path="res://dev/scripts/inventory_slot.gd" id="1_x1d2u"]
[ext_resource type="Texture2D" uid="uid://d1f8ws8v5u5gk" path="res://assets/dev/sprites/REMASTERED/inventory slot.png" id="2_taeqq"]

[node name="InventorySlot" type="CenterContainer" groups=["inventory_slots"]]
custom_minimum_size = Vector2(40, 40)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x1d2u")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 2
texture_normal = ExtResource("2_taeqq")
texture_pressed = ExtResource("2_taeqq")
texture_hover = ExtResource("2_taeqq")
texture_disabled = ExtResource("2_taeqq")
texture_focused = ExtResource("2_taeqq")

[connection signal="gui_input" from="TextureButton" to="." method="_on_texture_button_gui_input"]
[connection signal="mouse_entered" from="TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="TextureButton" to="." method="_on_texture_button_mouse_exited"]
